data/forge_javadoc/1.10.2/processed/net_minecraft_item_ItemBanner.md
# ItemBanner

**Inheritance:** java.lang.Object → net.minecraftforge.fml.common.registry.IForgeRegistryEntry.Impl<Item> → net.minecraft.item.Item → net.minecraft.item.ItemBlock → net.minecraft.item.ItemBanner

## Class signature

```java
public class ItemBanner extends ItemBlock
```

## Methods

- `void addInformation(ItemStack stack, EntityPlayer playerIn, java.util.List<java.lang.String> tooltip, boolean advanced)`
- `static void appendHoverTextFromTileEntityTag(ItemStack stack, java.util.List<java.lang.String> p_185054_1_)`
- `static EnumDyeColor getBaseColor(ItemStack stack)`
- `CreativeTabs getCreativeTab()`
- `java.lang.String getItemStackDisplayName(ItemStack stack)`
- `void getSubItems(Item itemIn, CreativeTabs tab, java.util.List<ItemStack> subItems)`
- `EnumActionResult onItemUse(ItemStack stack, EntityPlayer playerIn, World worldIn, BlockPos pos, EnumHand hand, EnumFacing facing, float hitX, float hitY, float hitZ)`

## Fields

- `ItemBanner`