data/forge_javadoc/1.12.2/processed/net_minecraft_item_ItemBanner.md
# ItemBanner

**Inheritance:** java.lang.Object → net.minecraftforge.registries.IForgeRegistryEntry.Impl<Item> → net.minecraft.item.Item → net.minecraft.item.ItemBlock → net.minecraft.item.ItemBanner

## Class signature

```java
public class ItemBanner extends ItemBlock
```

## Methods

- `void addInformation(ItemStack stack, World worldIn, java.util.List<java.lang.String> tooltip, ITooltipFlag flagIn)`
- `static void appendHoverTextFromTileEntityTag(ItemStack stack, java.util.List<java.lang.String> p_185054_1_)`
- `static EnumDyeColor getBaseColor(ItemStack stack)`
- `CreativeTabs getCreativeTab()`
- `java.lang.String getItemStackDisplayName(ItemStack stack)`
- `void getSubItems(CreativeTabs tab, NonNullList<ItemStack> items)`
- `static ItemStack makeBanner(EnumDyeColor p_190910_0_, NBTTagList p_190910_1_)`
- `EnumActionResult onItemUse(EntityPlayer player, World worldIn, BlockPos pos, EnumHand hand, EnumFacing facing, float hitX, float hitY, float hitZ)`

## Fields

- `ItemBanner`